Fix some swagger issues
