# src/AutoHome.Server/Endpoints/Devices/List.cs
@@ -25,7 +25,7 @@ public class List : EndpointBaseAsync
     [HttpGet("api/devices")]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(IEnumerable<ListDevicesResult>))]
     [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(ValidationProblemDetails))]
-    [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(InternalServerErrorResult))]
+    [ProducesResponseType(StatusCodes.Status500InternalServerError)]
     [ProducesJson]
     [SwaggerOperation(
         Summary = "Lists devices",
